--- a/calculator/views/add.erb
+++ b/calculator/views/add.erb
@@ -6,11 +6,12 @@
 </head>
 <body>
 <h1>Add</h1>
+
 <form action="/calculate_add" method="POST">
-  <label for="number1">Number 1:</label>
-  <input type="number" id="number1" placeholder="100">
-  <label for="number2">Number 2:</label>
-  <input type="number" id="number2" placeholder="100">
+  <input type="number" name="first_number" placeholder="1st number">
+  <input type="number" name="second_number" placeholder="2nd number">
+
+  <button type="submit">Calculate</button>
 </form>
   
 </body>
