--- a/calculator/views/home.erb
+++ b/calculator/views/home.erb
@@ -5,38 +5,24 @@
   <title>add | Online Calculator</title>
 </head>
 <body>
-<p>El resultado es: <%= @result %></p>
 
-<h1>Addition</h1>
-<form action="/calculate_add" method="POST">
+<h1>Claculator</h1>
+<form action="/" method="POST">
   <input type="number" name="first_number" placeholder="1st number">
   <input type="number" name="second_number" placeholder="2nd number">
 
-  <button type="submit">Calculate</button>
+  <button type="submit" name="operation" value="add">+</button>
+
+  <button type="submit" name="operation" value="substract">-</button>
+
+  <button type="submit" name="operation" value="multiply">x</button>
+
+  <button type="submit" name="operation" value="divide">/</button>
 </form>
 
-<h1>Substraction</h1>
-<form action="/calculate_substract" method="POST">
-  <input type="number" name="first_number" placeholder="1st number">
-  <input type="number" name="second_number" placeholder="2nd number">
+<% if @result %>
+  <p>El resultado es: <%= @result %></p>
+<% end %>
 
-  <button type="submit">Calculate</button>
-</form>
-
-<h1>Multiplication</h1>
-<form action="/calculate_multiply" method="POST">
-  <input type="number" name="first_number" placeholder="1st number">
-  <input type="number" name="second_number" placeholder="2nd number">
-
-  <button type="submit">Calculate</button>
-</form>
-
-<h1>Division</h1>
-<form action="/calculate_divide" method="POST">
-  <input type="number" name="first_number" placeholder="1st number">
-  <input type="number" name="second_number" placeholder="2nd number">
-
-  <button type="submit">Calculate</button>
-</form>
 </body>
 </html>
