--- a/calculator/views/home.erb
+++ b/calculator/views/home.erb
@@ -3,30 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <title>add | Online Calculator</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+  <style>
+    .logo {
+      width: 200px;
+      margin: 20px 0;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Claculator</h1>
-<form action="/" method="POST">
-  <input type="number" name="first_number" placeholder="1st number" value=<%= @next_num %>>
-  <input type="number" name="second_number" placeholder="2nd number">
+<div class="container">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+      <div class="text-center">
+        <img src="./logo.png" alt="" class="logo">
+      </div>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Calculator</h3>
+        </div>
+        <div class="panel-body">
+          <form action="/" method="POST">
+            <div class="form-group">
+              <input class="form-control text-center" type="number" name="first_number" placeholder="1st number" value=<%= @next_num %>>
+            </div>
+            <div class="form-group">
+              <input class="form-control text-center" type="number" name="second_number" placeholder="2nd number">
+            </div>
 
-  <button type="submit" name="operation" value="add">+</button>
+            <div class="form-group text-center">
+              <button class="btn btn-primary btn-lg" type="submit" name="operation" value="add">+</button>
+              <button class="btn btn-primary btn-lg" type="submit" name="operation" value="substract">-</button>
+              <button class="btn btn-primary btn-lg" type="submit" name="operation" value="multiply">x</button>
+              <button class="btn btn-primary btn-lg" type="submit" name="operation" value="divide">/</button>
+            </div>
+          </form>
+        </div>
+      </div>
 
-  <button type="submit" name="operation" value="substract">-</button>
-
-  <button type="submit" name="operation" value="multiply">x</button>
-
-  <button type="submit" name="operation" value="divide">/</button>
-</form>
-
-<% if @result %>
-  <p>El resultado es: <%= @print_result %></p>
-
-<form action="/" method="POST">
-  <button type="submit" name="save_file" value=<%= @result %>>Save</button>
-</form>
-<% end %>
+      <% if @result %>
+        <div class="alert alert-info text-center" role="alert">
+          <h3>The result is: <%= @print_result %></h3>
+          <br />
+          <form action="/" method="POST">
+            <button class="btn btn-primary" type="submit" name="save_file" value=<%= @result %>>Save result</button>
+          </form>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
